--- a/index.html
+++ b/index.html
@@ -3,28 +3,24 @@
      <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
      <head>
-          
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">My Books Site</a>
+            <a class="navbar-brand" href="#"> Data Engineer </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="{{'/'}}">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="{{'/'}}"> Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{{'/books' }}">Books</a>
+                  <a class="nav-link" href="{{'/books' }}"> Bio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{{'/addbook'}}">Add Book</a>
+                  <a class="nav-link" href="{{'/addbook'}}"> Projects</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="{{'/addimage'}}">Add Image</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Delete Book(Disabled)</a>
+                  <a class="nav-link disabled" href="{{'/addimage'}}">Articles</a>
                 </li>
               </ul>
             </div>
